--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ quarkus.datasource.username = topicos1
 quarkus.datasource.password = 123456
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/topicos1db
 
+# configuracao do jwt
+mp.jwt.verify.publickey.location=token/publicKey.pem
+mp.jwt.verify.issuer=unitins-jwt
+smallrye.jwt.sign.key.location=token/privateKey.pem
 # quarkus.hibernate-orm.database.generation=drop-and-create
 # quarkus.hibernate-orm.database.generation=update
 # quarkus.hibernate-orm.database.generation=none
