--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,21 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/topicos1db
 mp.jwt.verify.publickey.location=token/publicKey.pem
 mp.jwt.verify.issuer=unitins-jwt
 smallrye.jwt.sign.key.location=token/privateKey.pem
+
+quarkus.log.category."br.unitins.topicos1.resource".level=DEBUG
+%prod.quarkus.log.level = INFO
+%dev.quarkus.log.level = INFO
+
+quarkus.log.console.color=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.level=DEBUG
+
+# configuração do arquivo de log
+quarkus.log.file.enable=true
+quarkus.log.file.path=/tmp/trace.log
+quarkus.log.file.level=TRACE
+quarkus.log.file.format=%d{dd-MM-yyyy HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.rotation.file-suffix=.dd-MM-yyyy-HH-mm
 # quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.database.generation=update
 # quarkus.hibernate-orm.database.generation=none
