--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ mp.jwt.verify.publickey.location=token/publicKey.pem
 mp.jwt.verify.issuer=unitins-jwt
 smallrye.jwt.sign.key.location=token/privateKey.pem
 
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200
+
 quarkus.log.category."br.unitins.topicos1.resource".level=DEBUG
 %prod.quarkus.log.level = INFO
 %dev.quarkus.log.level = INFO
