esqueci senha tent

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
         <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-mailer</artifactId>
+    </dependency>
+    <dependency>
         <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt-jackson</artifactId>
         <version>0.11.2</version>
