--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,10 @@ quarkus.log.file.rotation.file-suffix=.dd-MM-yyyy-HH-mm
 # quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.database.generation=update
 # quarkus.hibernate-orm.database.generation=none
+
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.auth=true
+quarkus.mailer.username=leonardozeaim@unitins.br
+quarkus.mailer.password=interp0L_*
+quarkus.mailer.starttls=true
