--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ smallrye.jwt.sign.key.location=token/privateKey.pem
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
+quarkus.http.cors.headers=Authorization,Content-Type,Accept,Origin,X-Requested-With
+quarkus.http.cors.exposed-headers=Authorization
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.access-control-max-age=24H
 
 quarkus.log.category."br.unitins.topicos1.resource".level=DEBUG
 %prod.quarkus.log.level = INFO
