--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,10 @@ smallrye.jwt.sign.key.location=token/privateKey.pem
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:4200
-quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS,PATCH
 quarkus.http.cors.headers=Authorization,Content-Type,Accept,Origin,X-Requested-With
 quarkus.http.cors.exposed-headers=Authorization
 quarkus.http.cors.access-control-allow-credentials=true
-quarkus.http.cors.access-control-max-age=24H
 
 quarkus.log.category."br.unitins.topicos1.resource".level=DEBUG
 %prod.quarkus.log.level = INFO
@@ -31,7 +30,7 @@ quarkus.log.file.path=/tmp/trace.log
 quarkus.log.file.level=TRACE
 quarkus.log.file.format=%d{dd-MM-yyyy HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.file.rotation.file-suffix=.dd-MM-yyyy-HH-mm
-# quarkus.hibernate-orm.database.generation=drop-and-create
+ quarkus.hibernate-orm.database.generation=update
 #quarkus.hibernate-orm.database.generation=update
 # quarkus.hibernate-orm.database.generation=none
 
